--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/SylvieCanongia/MERN-project-les-argonautes#readme",
   "dependencies": {
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "dotenv-expand": "^8.0.3",
     "express": "^4.18.1",
