--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start_local": "nodemon -r dotenv-expand/config -r dotenv/config server.js dotenv_config_path=./config/.env",
-    "start": "node server.js",
+    "start": "nodemon -r dotenv-expand/config -r dotenv/config server.js dotenv_config_path=./config/.env",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "nodemonConfig": {
